--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -116,6 +116,9 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   width: 100%;
   height: 150px;
   background-color: #000080;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #main-logo {
@@ -232,9 +235,9 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   
   nav .nav-links a:hover {
     color: gold;
-    border-bottom: 2px solid gold;
+    border-bottom: 3px solid gold;
     padding-bottom: 2px;
-    transition: 0.6s;
+    transition: 0.5s;
   }
   nav .hamburger-button {
     display: none;
@@ -320,12 +323,29 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 #contact-container {
   margin-top: 150px;
   display: block;
-  height: 400px;
+  height: 800px;
+  width:80%;
+  margin-left:auto;
+  margin-right: auto;
+  font-size: 22px;
 
 }
 
-body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.contact-elm{
+
+  margin-top:20px;
+  display: block;
+  
+}
+
+.contact-elm img {
+  display: inline-block;
+  margin-left:20px;
+}
+
+#footer h1{
+  color:white;
+  text-align: end;
+  padding-right: 50px;
 }
