--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -94,7 +94,6 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 
 .main-container {
   text-align: center;
-  margin-bottom: 10px;
   display: inline-block;
   width: 100%;
 }
@@ -112,14 +111,7 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   font-size: 31px;
 }
 
-#footer {
-  width: 100%;
-  height: 150px;
-  background-color: #000080;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+
 
 #main-logo {
   display: inline-block;
@@ -323,12 +315,11 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 #contact-container {
   margin-top: 150px;
   display: block;
-  height: 800px;
+  height: 200px;
   width:80%;
   margin-left:auto;
   margin-right: auto;
   font-size: 22px;
-
 }
 
 
@@ -344,8 +335,18 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   margin-left:20px;
 }
 
-#footer h1{
+#footer {
+  width: 100%;
+  height: 150px;
+  background-color: #000080;  
+}
+
+#footer-made{
   color:white;
-  text-align: end;
-  padding-right: 50px;
+  width: 375px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
 }
