--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -314,12 +314,14 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 #contact-container {
   margin-top: 150px;
   display: block;
-  height: 250px;
+
   width:10%;
   margin-left:auto;
   margin-right: auto;
+  margin-bottom: 20px;
   font-size: 22px;
   text-align: center;
+  
 }
 
  
@@ -329,6 +331,8 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   margin-left:auto;
   margin-right: auto;
   margin-top:20px;
+  display: inline-block;
+  margin-right: 20px;
 }
 
 
