--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -13,6 +13,11 @@ nav {
   background-color: #000080;
 }
 
+#nav-envelop{
+  height: 4260px;
+  position: absolute;
+}
+
 .nav-links {
   clear: both;
   height: 0;
@@ -66,10 +71,13 @@ nav {
 
 nav #hamburger-check {
   display: none;
+  position: relative;
 }
 
+
+
 nav #hamburger-check:checked~.nav-links {
-  height: 100vh;
+  height: 100vh; 
 }
 
 nav #hamburger-check:checked~.hamburger-button .top {
@@ -319,22 +327,31 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 #contact-container {
   margin-top: 50px;
   display: block;
-  height: 300px;
+  width:320px;
+  height: 200px;
   margin-left:auto;
   margin-right: auto;
   margin-bottom: 20px;
   font-size: 22px;
+  border:2px solid black;
   
 }
 
-
+#icons-cont{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width:200px;
+  margin-left:auto;
+  margin-right: auto;
+}
  
 .icon-cont{
   width:75px;
   height: 75px;
   margin-top:20px;
   margin-right: 20px;
-  display: block;
+  display: inline-block;
   margin-left:auto;
   margin-right: auto;
 }
