--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -13,10 +13,6 @@ nav {
   background-color: #000080;
 }
 
-#nav-envelop{
-  height: 4260px;
-  position: absolute;
-}
 
 .nav-links {
   clear: both;
@@ -27,6 +23,8 @@ nav {
   -ms-transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
   -o-transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
   transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+
+  z-index: 0;
 }
 
 .nav-elm {
@@ -74,8 +72,6 @@ nav #hamburger-check {
   position: relative;
 }
 
-
-
 nav #hamburger-check:checked~.nav-links {
   height: 100vh; 
 }
@@ -118,7 +114,6 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 #technologies-title h1 {
   font-size: 31px;
 }
-
 
 #main-logo {
   display: inline-block;
@@ -231,18 +226,19 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
     float: right;
     height: auto;
   }
+
   nav .nav-links a {
     display: inline-block;
     margin-right: 10px;
   }
 
-  
   nav .nav-links a:hover {
     color: gold;
     border-bottom: 3px solid gold;
     padding-bottom: 2px;
     transition: 0.5s;
   }
+
   nav .hamburger-button {
     display: none;
   }
@@ -334,7 +330,6 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   margin-bottom: 20px;
   font-size: 22px;
   border:2px solid black;
-  
 }
 
 #icons-cont{
@@ -361,6 +356,8 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   width: 100%;
   height: 150px;
   background-color: #000080;  
+  position: relative;
+  z-index: 2;
 }
 
 #footer-made{
